🐛 fix(Header.astro): remove incorrect URLs for Github and Twitter icons 🔧 chore(Header.astro): add MoonIcon component to support dark mode toggle 🔧 chore(HeaderLink.astro): add 'rel' attribute to anchor tag to improve accessibility 🔧 chore(PostCard.astro): adjust height of hero image and remove unnecessary class ✨ feat(MoonIcon.astro): add MoonIcon component 🔧 chore(BaseLayout.astro): add script to handle dark mode based on user preference 🔧 chore(global.css): add styles for moon and sun icons animation 🔧 chore(tailwind.config.cjs): enable dark mode support

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,19 @@
   src: url(../assets/fonts/Manrope-Regular.woff2);
   src: url(../assets/fonts/Manrope-Medium.woff2);
 }
+
+.moon-logo {
+  transform: translateY(0%) rotateZ(0deg);
+}
+
+.sun-logo {
+  transform: translateY(0) rotateZ(0deg);
+}
+
+.animate-sun {
+  transform: translateY(20%) rotateZ(100deg);
+}
+
+.animate-moon {
+  transform: translateY(20%) rotateZ(50deg);
+}
